GnuPG master shows an error when importing Ed25519 keys generated
Closed, ResolvedPublic

Assigned To
Authored By
gniibe
Oct 30 2020, 12:55 AM
Tags

Description

With GPG=/usr/local/bin/gpg (master as of rG243f9176e799: gpg: New command --quick-revoke-sig), I invoked:

while export GNUPGHOME=$(mktemp -d) && $GPG --batch --passphrase '' --quick-gen-key "test <t@gniibe.org>" ed25519 && $GPG -o e.gpg --export-secret-key test && rm $GNUPGHOME/private-keys-v1.d/* && $GPG --import e.gpg; do rm e.gpg; date; done

... and it shows an error soon like:

gpg: key 045AB2BF3812ABE9: 1 bad signature
gpg: key 045AB2BF3812ABE9: no valid user IDs
gpg: this may be caused by a missing self-signature

Event Timeline

One bug is fixed in rGdd4fb1c8f668: gpg: Fix first zero-byte case for SOS handling..

We have another problem with libgcrypt 1.8. When it's exported, its checksum is wrong.

gniibe changed the task status from Open to Testing.Nov 4 2020, 3:14 AM
gniibe edited projects, added gnupg, Restricted Project; removed gpgagent, gnupg (gpg22).